--- a/lab1/lab1.html
+++ b/lab1/lab1.html
@@ -1,32 +1,43 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" 
-"http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"&gt;
-<html xmlns="http://www.w3.org/1999/xhtml&quot; xml:lang="en">
 
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
+"http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
- <link rel="stylesheet" type="text/css" href="aboutme-style.css"title="style"/>
- 
- <title> Обо мне </title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Обо мне</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+<link rel="stylesheet" type="text/css" href="aboutme-style.css"
+title="style" />
+<link rel="stylesheet" type="text/css" href="aboutme-style-majors.css"
+title="style" />
+
 </head>
 <body>
- <h1> Обо мне </h1>
- <p> Мое имя <strong>Никита</strong>, мой ник Solarclipse  </p>
- <hr>
- <h2> Мои любимые предметы в этом семестре </h2>
- <ul>
-  <li>Проектный практикум</li>
-  <li>Разработка на платформе 1С</li>
-  <li>Проектирование ИС</li>
- </ul>
- <h2> Мои любимые за сентябрь: фильм, книга, видео </h2>
- <ol>
- <li> Интерстеллар <a href="https://www.kinopoisk.ru/film/258687/?utm_referrer=yandex.ru/"&gt; КиноПоиск </a> </li> 
- <li> Робинзон Крузо <a href="https://nukadeti.ru/rasskazy/robinzon-kruzo/"&gt; Ну-ка дети </a> </li>
- <li> Clash Royal champ <a href="https://rutube.ru/channel/7858596/?ysclid=mfxgjt9625774523719"&gt; Art </a> </li>
- </ol>
- <h2> Мои эго </h2>
- <p> Счастье: <img src="happy.jpg" height="300"> </p> 
- <p>Грусть: <img src="bad.jpg" height="300"></p>
+<h1>Обо  мне</h1>
+	<p>Мое имя <strong>Никита</strong>.Люблю пиццу и деньги.</p>
+	<hr/>
+<h2>Мои НЕлюбимые предметы</h2>
+	
+	<ul>
+		<li>ИП Интернет-программирование</li>
+		<li>ИП Интернет-программирование</li>
+		<li>ИП Интернет-программирование</li>
+		</ul>
+	<h2>Мои любимые фильмы, книги, телепередачи на сегодня</h2>
+	
+	<ol>
+		<li>Душа шпиона (<a href="http://www.kinopoisk.ru/film/797574/">КиноПоиск</a>)</li>
 
+		<li>В.Б. Иорданский. Африканскими дорогами.(<a
+href="http://www.ozon.ru/context/detail/id/2445785/">Ozon</a>)</li>
+
+		<li>Открытие нового российского бренда Sputnik (<a
+href="http://ria.ru/news_company/20141110/1032622239.html">РИА</a>)</li>
+	</ol>
+	
+	<h2>Моё Счастье и Грусть</h2>
+	<p>Счастье: <img src="happy.jpg" alt="Happy" title="My Happy Self" height="300" />
+	Несчастье: <img src="sad.jpg" alt="Sad" title="My Sad Self" height="300"/>
+	</p>
 </body>
 </html>
