--- a/lab1/lab1.html
+++ b/lab1/lab1.html
@@ -19,25 +19,24 @@ title="style" />
 <h2>Мои НЕлюбимые предметы</h2>
 	
 	<ul>
-		<li>ИП Интернет-программирование</li>
-		<li>ИП Интернет-программирование</li>
-		<li>ИП Интернет-программирование</li>
+		<li>Информационная поддержка производственных процессов предприятий агропромышленного комплекс</li>
+		<li>Интеллектуальные информационные системы</li>
 		</ul>
-	<h2>Мои любимые фильмы, книги, телепередачи на сегодня</h2>
+	<h2>Мои любимые фильмы, книги, игры на сегодня</h2>
 	
 	<ol>
-		<li>Душа шпиона (<a href="http://www.kinopoisk.ru/film/797574/">КиноПоиск</a>)</li>
+		<li>Интерстеллар (<a href="https://www.kinopoisk.ru/film/258687/">КиноПоиск</a>)</li>
 
-		<li>В.Б. Иорданский. Африканскими дорогами.(<a
-href="http://www.ozon.ru/context/detail/id/2445785/">Ozon</a>)</li>
+		<li>Робинзон Крузо | Дефо Даниель.(<a
+href="https://www.ozon.ru/product/robinzon-kruzo-defo-daniel-585304551/?at=XQtkrw4YmhmxPp94u2lw5Ezu7wP7AJhVoR8yziN0DBlA">Ozon</a>)</li>
 
-		<li>Открытие нового российского бренда Sputnik (<a
-href="http://ria.ru/news_company/20141110/1032622239.html">РИА</a>)</li>
+		<li>Cruelty Squad (<a
+href="https://store.steampowered.com/app/1388770/Cruelty_Squad/">Steam</a>)</li>
 	</ol>
 	
 	<h2>Моё Счастье и Грусть</h2>
-	<p>Счастье: <img src="happy.jpg" alt="Happy" title="My Happy Self" height="300" />
-	Несчастье: <img src="sad.jpg" alt="Sad" title="My Sad Self" height="300"/>
+	<p>Счастье: <img src="happy.jpg" alt="Happy" title="My Happy Self" height="200" width = "200" /></p>
+	<p>Грусть: <img src="sad.png" alt="Sad" title="My Sad Self" height="200" width = "200"/>
 	</p>
 </body>
 </html>
