--- a/lab2/journal.html
+++ b/lab2/journal.html
@@ -6,7 +6,7 @@
 <!-- This links to a stylesheet that gives basic formatting to your
 page; you do not need to modify this. -->
 <link rel="stylesheet" type="text/css"
-href="C:\Users\gmser\OneDrive\Desktop\lab2\basic.css" title="style" />
+href="basic.css" title="style" />
 <!-- This is linking to your stylesheet, journal_layout.css -->
 <link rel="stylesheet" type="text/css" href="journal_ex1.css"
 title="style" />
@@ -21,7 +21,7 @@ title="style" />
 <h2><span class="date">1/12/14: Как есть крабов</span></h2>
 <p>
 <img
-src="C:\Users\gmser\OneDrive\Desktop\lab2\image\Eat-Crabs2.jpg" alt="Инструменты
+src="image\Eat-Crabs2.jpg" alt="Инструменты
 для крабов" />
 </p>
 <p>
@@ -40,7 +40,7 @@ appear below any floating content, so the journal entry will be large enough.
 <h2><span class="date">11/11/15: Подготовка</span></h2>
 <p>
 <img
-src="C:\Users\gmser\OneDrive\Desktop\lab2\image\Eat-Crabs3.jpg" alt="Инструменты
+src="image\Eat-Crabs3.jpg" alt="Инструменты
 для крабов" />
 </p>
 <p>
@@ -76,3 +76,4 @@ alt="Valid CSS" />
 </p>
 </body>
 </html>
+
