--- a/lab2/journal.html
+++ b/lab2/journal.html
@@ -21,7 +21,7 @@ title="style" />
 <h2><span class="date">1/12/14: Как есть крабов</span></h2>
 <p>
 <img
-src="Eat-Crabs2.jpg" alt="Инструменты
+src="image\Eat-Crabs2.jpg" alt="Инструменты
 для крабов" />
 </p>
 <p>
@@ -76,5 +76,6 @@ alt="Valid CSS" />
 </p>
 </body>
 </html>
+
 
 
