--- a/lab2/journal.html
+++ b/lab2/journal.html
@@ -66,16 +66,16 @@ appear below any floating content, so the journal entry will be large enough.
 </div>
 <p>
 <a href="https://webster.cs.washington.edu/validate-html.php">
-<img src="http://webster.cs.washington.edu/w3c-html.png"
-alt="Valid HTML5" />
+<img src="w3c_html.jpg" />
 </a>
 <a href="https://webster.cs.washington.edu/validate-css.php">
-<img src="http://webster.cs.washington.edu/w3c-css.png"
+<img src="w3c_css.png"
 alt="Valid CSS" />
 </a>
 </p>
 </body>
 </html>
+
 
 
 
