--- a/lab2/journal.html
+++ b/lab2/journal.html
@@ -64,6 +64,7 @@ appear below any floating content, so the journal entry will be large enough.
 <p class="spacer"></p>
 </div>
 </div>
+<div class="footer-links">
 <p>
 <a href="https://webster.cs.washington.edu/validate-html.php">
 <img src="w3c_html.jpg" height="30"width="80" />
@@ -73,8 +74,10 @@ appear below any floating content, so the journal entry will be large enough.
 alt="Valid CSS" />
 </a>
 </p>
+</div>
 </body>
 </html>
+
 
 
 
